force-app/main/default/objects/Contact/fields/Account_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Primary Contact</label>
    <type>Checkbox</type>
</CustomField>