force-app/main/default/objects/Contact/fields/Account_Size__c.field-meta.xml
<CustomField>
    <fullName>Account_Size__c</fullName>
    <label>Account Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$1B</fullName>
            </value>
            <value>
                <fullName>$1B-$5B</fullName>
            </value>
            <value>
                <fullName>$5B-$20B</fullName>
            </value>
            <value>
                <fullName>$20B-$100B</fullName>
            </value>
            <value>
                <fullName>&gt;$100B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>