force-app/main/default/objects/Contact/fields/Bounced_email__c.field-meta.xml
<CustomField>
    <fullName>Bounced_email__c</fullName>
    <description>Salesforce bounced email indicator</description>
    <formula>EmailBouncedReason</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked automatically when Salesforce detects that an email sent through Salesforce has bounced.</inlineHelpText>
    <label>Bounced email</label>
    <type>Text</type>
</CustomField>