force-app/main/default/objects/Contact/fields/Calls__c.field-meta.xml
<CustomField>
    <fullName>Calls__c</fullName>
    <label>Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>