force-app/main/default/objects/Contact/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <label>Deactivated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>