force-app/main/default/objects/Contact/fields/DebtX_Registered__c.field-meta.xml
<CustomField>
    <fullName>DebtX_Registered__c</fullName>
    <label>DebtX Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>