force-app/main/default/objects/Contact/fields/Disable_Synchonization__c.field-meta.xml
<CustomField>
    <fullName>Disable_Synchonization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Synchonization</label>
    <type>Checkbox</type>
</CustomField>