force-app/main/default/objects/Contact/fields/Disable_Synchronization__c.field-meta.xml
<CustomField>
    <fullName>Disable_Synchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Synchronization</label>
    <type>Checkbox</type>
</CustomField>