force-app/main/default/objects/Contact/fields/Education_Finance__c.field-meta.xml
<CustomField>
    <fullName>Education_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check here if contact is active in the student loan/education finance industry</description>
    <label>Education Finance</label>
    <type>Checkbox</type>
</CustomField>