force-app/main/default/objects/Contact/fields/Flow_Override__c.field-meta.xml
<CustomField>
    <fullName>Flow_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checking this box off my exclude it from certain flows.</description>
    <label>Flow Override</label>
    <type>Checkbox</type>
</CustomField>