force-app/main/default/objects/Contact/fields/Holiday_Card__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Card__c</fullName>
    <description>Should contact receive DebtX holiday card?</description>
    <label>Holiday Card?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>