force-app/main/default/objects/Contact/fields/Lender_Type__c.field-meta.xml
<CustomField>
    <fullName>Lender_Type__c</fullName>
    <label>Lender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Hard Money</fullName>
            </value>
            <value>
                <fullName>Alternative</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>