force-app/main/default/objects/Contact/fields/Marketing_Mailings__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Mailings__c</fullName>
    <description>Does the user want to receive DebtX marketing mailings?</description>
    <label>Marketing Mailings?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, bad email address</fullName>
            </value>
            <value>
                <fullName>No, requested removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>