force-app/main/default/objects/Contact/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <description>Does user subscribe to DebtX newsletter?</description>
    <label>Newsletter?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>