force-app/main/default/objects/Contact/fields/Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions__c</fullName>
    <label>Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>