force-app/main/default/objects/Contact/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resi - mortgage broker</fullName>
            </value>
            <value>
                <fullName>Resi - property broker</fullName>
            </value>
            <value>
                <fullName>CRE - mortgage broker</fullName>
            </value>
            <value>
                <fullName>CRE - property broker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Trade Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>