force-app/main/default/objects/Contact/fields/PE_RE_Fund_Contact__c.field-meta.xml
<CustomField>
    <fullName>PE_RE_Fund_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>contact works at a private equity real estate fund or fund manager or in that field</description>
    <label>PE RE Fund Contact</label>
    <type>Checkbox</type>
</CustomField>