force-app/main/default/objects/Contact/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <inlineHelpText>The phone extension for this contacts main line</inlineHelpText>
    <label>Phone Extension</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>