force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>