force-app/main/default/objects/Contact/fields/Site_User_ID2__c.field-meta.xml
<CustomField>
    <fullName>Site_User_ID2__c</fullName>
    <description>User&apos; Debtx.com ID number</description>
    <label>Site User ID#</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>