force-app/main/default/objects/Contact/fields/Site_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_User_Name__c</fullName>
    <description>Contact&apos;s username on DebtX web site</description>
    <label>Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>