force-app/main/default/objects/Contact/fields/Trading_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trading_Contact__c</fullName>
    <description>Name of primary trader assigned to this Contact</description>
    <label>Trading Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>