force-app/main/default/objects/Contact/fields/Whole_Loan_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Whole_Loan_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whole Loan Buyer?</label>
    <type>Checkbox</type>
</CustomField>