force-app/main/default/objects/Contact/fields/X2_2__c.field-meta.xml
<CustomField>
    <fullName>X2_2__c</fullName>
    <description>Captures each contact&apos;s level of enthusiasm for the product.</description>
    <inlineHelpText>+2: Vocal advocate for the product and can be relied upon as an evangelist
+1: Leans Positive 
0: Neutral 
-1: Leans Negative
-2: Vocal Antagonist</inlineHelpText>
    <label>+2 / -2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+2</fullName>
            </value>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>