force-app/main/default/objects/Contact/listViews/Account_Primary_Contacts.listView-meta.xml
<ListView>
    <fullName>Account_Primary_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Primary_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Account Primary Contacts</label>
</ListView>