force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>User_Level__c</columns>
    <columns>Account_Primary_Contact__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Account_Primary_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>User_Level__c</field>
        <operation>equals</operation>
        <value>Power User,Global Admin</value>
    </filters>
    <label>All Contacts</label>
</ListView>