force-app/main/default/objects/Contact/listViews/Primary_Contacts_and_Power_Users.listView-meta.xml
<ListView>
    <fullName>Primary_Contacts_and_Power_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Primary Contacts and Power Users</label>
</ListView>