force-app/main/default/objects/Contact/listViews/Q4_Product_Communication_10_18.listView-meta.xml
<ListView>
    <fullName>Q4_Product_Communication_10_18</fullName>
    <booleanFilter>1 AND 4 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>User_Level__c</field>
        <operation>equals</operation>
        <value>Power User,Global Admin</value>
    </filters>
    <filters>
        <field>Account_Primary_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.DXProduct__c</field>
        <operation>equals</operation>
        <value>DXSyndicate</value>
    </filters>
    <label>Q4 Product Communication 10.18</label>
</ListView>